--- a/index.html
+++ b/index.html
@@ -3,71 +3,45 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>ナカムロボ AR 最終調整版</title>
-
+  <title>ナカムロボ AR 最終調整</title>
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
-
   <style>
     :root { --primary-color: #4285f4; }
     body { margin: 0; background: #ffffff; font-family: sans-serif; overflow: hidden; }
-
-    model-viewer {
-      width: 100vw;
-      height: 70vh;
-      background: #f8f9fa;
-      /* 指の操作をブラウザに奪われないための重要設定 */
-      touch-action: none; 
-    }
-
-    .controls {
-      width: 100vw; height: 30vh;
-      display: flex; flex-direction: column;
-      align-items: center; justify-content: center;
-      background: #ffffff;
-      box-shadow: 0 -5px 15px rgba(0,0,0,0.05);
-    }
-
-    #ar-button {
-      background-image: url(https://modelviewer.dev/assets/ic_view_in_ar_new_googblue_48dp.png);
-      background-repeat: no-repeat; background-size: 24px 24px; background-position: 20px 50%;
-      background-color: var(--primary-color);
-      color: white; width: 85%; height: 70px; line-height: 70px;
-      padding: 0 20px 0 55px; font-size: 18px; font-weight: bold;
-      border-radius: 35px; border: none; cursor: pointer;
-    }
-
-    .instruction { margin-top: 15px; color: #666; font-size: 12px; text-align: center; padding: 0 10px; line-height: 1.6; }
+    model-viewer { width: 100vw; height: 70vh; background: #f8f9fa; touch-action: none; }
+    .controls { width: 100vw; height: 30vh; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #ffffff; box-shadow: 0 -5px 15px rgba(0,0,0,0.05); }
+    #ar-button { background-image: url(https://modelviewer.dev/assets/ic_view_in_ar_new_googblue_48dp.png); background-repeat: no-repeat; background-size: 24px 24px; background-position: 20px 50%; background-color: var(--primary-color); color: white; width: 85%; height: 75px; line-height: 75px; padding: 0 20px 0 55px; font-size: 20px; font-weight: bold; border-radius: 40px; border: none; cursor: pointer; box-shadow: 0 6px 20px rgba(66, 133, 244, 0.3); }
+    #ar-button:active { transform: scale(0.96); }
+    .instruction { margin-top: 15px; color: #666; font-size: 13px; text-align: center; padding: 0 10px; line-height: 1.6; }
   </style>
 </head>
-
 <body>
-
   <model-viewer
     id="ar-viewer"
     src="dance.glb"
     ios-src="dance.usdz"
     ar
-    /* WebXRを優先しつつ、Scene Viewerは削除（戻されるバグ対策） */
     ar-modes="webxr quick-look"
     ar-scale="auto"
-    /* 1本指で回転、2本指で移動を許可する属性を追加 */
     camera-controls
     enable-pan
+    /* 床認識を「強制」するための重要属性 */
     ar-placement="floor"
+    interaction-prompt="auto"
+    shadow-intensity="2"
+    shadow-softness="0.5"
     environment-image="neutral"
-    shadow-intensity="1.5"
-    interaction-prompt="auto">
+    scale="0.8 0.8 0.8">
   </model-viewer>
 
   <div class="controls">
     <button id="ar-button" onclick="document.querySelector('#ar-viewer').activateAR()">
-      ARを起動する
+      ナカムロボをAR召喚
     </button>
     <div class="instruction">
-      1本指で回転、2本指で移動・拡大ができます。<br>
-      起動直後は、スマホをゆっくり動かして床を認識させてください。
+      【重要】起動後、ロボを動かそうとする前に<br>
+      スマホをゆっくり左右に30cmほど並行移動させてください。
     </div>
   </div>
-
 </body>
 </html>
