--- a/index.html
+++ b/index.html
@@ -2,50 +2,21 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ナカムロボ AR Viewer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
+  <title>ナカムロボ AR 召喚</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   <style>
-    html, body {
-      margin: 0; padding: 0; background: #000; color: #fff;
-      font-family: sans-serif; height: 100%; overflow: hidden;
-    }
+    html, body { margin: 0; padding: 0; background: #000; color: #fff; font-family: sans-serif; height: 100%; overflow: hidden; }
     .wrap { display: flex; flex-direction: column; height: 100%; }
-
-    /* モデル表示：画面の65%に。scale設定と合わせて少し小さく表示 */
-    model-viewer {
-      width: 100%;
-      height: 65vh;
-      background: #000;
-    }
-
-    /* 下部：操作パネル。スクロール不要で巨大ボタンを配置 */
-    .controls {
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      height: 35vh; background: #111; border-top: 1px solid #333;
-    }
-
-    /* 召喚ボタン：とにかく巨大、押し間違いなし */
+    model-viewer { width: 100%; height: 60vh; background: #000; touch-action: none; }
+    .controls { display: flex; flex-direction: column; align-items: center; justify-content: center; height: 40vh; background: #111; border-top: 1px solid #333; }
     #ar-button {
-      width: 85%;
-      height: 85px;
-      font-size: 22px;
-      font-weight: bold;
-      border: none;
-      border-radius: 45px;
-      background: #00ffcc; /* index_qrと同じ色 */
-      color: #000;
-      box-shadow: 0 4px 25px rgba(0, 255, 204, 0.4);
-      cursor: pointer;
+      width: 85%; height: 90px; font-size: 22px; font-weight: bold; border: none; border-radius: 45px;
+      background: #00ffcc; color: #000; box-shadow: 0 4px 25px rgba(0, 255, 204, 0.4); cursor: pointer;
     }
-    #ar-button:active { transform: scale(0.95); }
-
-    .note { margin-top: 15px; font-size: 13px; opacity: 0.7; text-align: center; }
+    .note { margin-top: 15px; font-size: 13px; opacity: 0.7; text-align: center; line-height: 1.6; }
   </style>
 </head>
-
 <body>
   <div class="wrap">
     <model-viewer
@@ -53,31 +24,39 @@
       src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
       ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
       ar
-      /* 【Android最優先】Scene Viewerを先頭に配置 */
-      ar-modes="scene-viewer quick-look webxr"
+      /* 不安定な scene-viewer を完全に排除し、webxr のみで勝負 */
+      ar-modes="webxr quick-look"
       camera-controls
+      ar-scale="auto"
+      interaction-prompt="auto"
       autoplay
       exposure="1"
-      /* モデルを少し小さく表示（0.7倍） */
-      scale="0.7 0.7 0.7">
+      scale="0.6 0.6 0.6">
     </model-viewer>
 
     <div class="controls">
-      <button id="ar-button" onclick="startAR()">ナカムロボをAR召喚</button>
+      <button id="ar-button" onclick="activate()">ナカムロボをAR召喚</button>
       <div class="note">
-        Scene Viewerで起動します。<br>
-        指1本で回転、2本指で移動・拡大が可能です。
+        【Android 16 起動重視モード】<br>
+        カメラが起動したら、スマホを左右に振って床を認識させてください。<br>
+        2本指で移動・拡大ができるようになります。
       </div>
     </div>
   </div>
 
   <script>
-    function startAR() {
-      const mv = document.getElementById('mv');
-      if (mv) {
-        mv.activateAR();
-      }
+    const mv = document.getElementById('mv');
+    function activate() {
+      mv.activateAR();
     }
+
+    // Android 16 の WebXR で操作ロックを外すための強制イベント
+    mv.addEventListener('ar-status', (event) => {
+      if(event.detail.status === 'session-started'){
+        // セッション開始時にスケール操作を再注入
+        mv.arScale = 'auto';
+      }
+    });
   </script>
 </body>
 </html>
