--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ナカムロボ AR 巨大版</title>
+  <title>ナカムロボ AR 召喚</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
@@ -19,74 +19,126 @@
     }
 
     .wrap {
-      display: flex;
-      flex-direction: column;
+      position: relative;
+      width: 100%;
       height: 100%;
     }
 
     model-viewer {
       width: 100%;
-      height: 60vh;
+      height: 100%;
       background: #000;
     }
 
-    .controls {
-      height: 40vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: #111;
-      border-top: 1px solid #333;
+    /* ゴースト円（召喚エフェクト） */
+    .summon-ring {
+      position: absolute;
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      border: 3px solid rgba(0,255,204,0.9);
+      box-shadow: 0 0 25px rgba(0,255,204,0.8);
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+      animation: ring 0.8s ease-out forwards;
     }
 
-    #ar-button {
-      width: 85%;
-      height: 90px;
-      font-size: 24px;
-      font-weight: bold;
-      border: none;
-      border-radius: 45px;
+    @keyframes ring {
+      from { transform: translate(-50%, -50%) scale(0.3); opacity: 1; }
+      to   { transform: translate(-50%, -50%) scale(1.5); opacity: 0; }
+    }
+
+    /* UIテキスト */
+    .ui {
+      position: absolute;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      background: rgba(0,0,0,0.6);
+      padding: 12px 20px;
+      border-radius: 20px;
+      font-size: 14px;
+      line-height: 1.6;
+      pointer-events: none;
+    }
+
+    /* 召喚ボタン */
+    #ar-btn {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       background: #00ffcc;
       color: #000;
+      font-weight: bold;
+      font-size: 16px;
+      border: none;
+      border-radius: 25px;
+      padding: 12px 24px;
       cursor: pointer;
-    }
-
-    .note {
-      margin-top: 15px;
-      font-size: 14px;
-      opacity: 0.8;
-      text-align: center;
-      line-height: 1.6;
+      z-index: 10;
     }
   </style>
 </head>
 
 <body>
-  <div class="wrap">
-    <model-viewer
-      id="mv"
-      src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
-      ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
-      ar
-      ar-modes="webxr scene-viewer quick-look"
-      ar-placement="auto"
-      ar-scale="auto"
-      scale="3 3 3"
-      shadow-intensity="2"
-      interaction-prompt="when-focused">
-    </model-viewer>
+<div class="wrap">
 
-    <div class="controls">
-      <button id="ar-button" onclick="document.getElementById('mv').activateAR()">
-        巨大ナカムロボを召喚
-      </button>
-      <div class="note">
-        画面をタップすると<br>
-        巨大ナカムロボを移動できます。<br>
-        （ドラッグ移動はできません）
-      </div>
-    </div>
+  <button id="ar-btn">ナカムロボを召喚</button>
+
+  <model-viewer
+    id="mv"
+    src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
+    ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
+    ar
+    ar-modes="webxr quick-look"
+    ar-placement="auto"
+    ar-scale="auto"
+    scale="3 3 3"
+    shadow-intensity="2"
+    environment-image="neutral"
+    interaction-prompt="none">
+  </model-viewer>
+
+  <div class="ui" id="ui-text">
+    画面をタップすると<br>
+    ナカムロボを再召喚できます
   </div>
+
+</div>
+
+<script>
+  const mv = document.getElementById('mv');
+  const btn = document.getElementById('ar-btn');
+  const ui = document.getElementById('ui-text');
+
+  // AR起動
+  btn.addEventListener('click', () => {
+    mv.activateAR();
+  });
+
+  // タップ時の召喚エフェクト
+  mv.addEventListener('click', (e) => {
+    // ゴースト円生成
+    const ring = document.createElement('div');
+    ring.className = 'summon-ring';
+    ring.style.left = e.clientX + 'px';
+    ring.style.top  = e.clientY + 'px';
+    document.body.appendChild(ring);
+
+    setTimeout(() => ring.remove(), 800);
+
+    ui.innerHTML = 'ナカムロボを<br>再召喚しました';
+  });
+
+  // AR状態監視
+  mv.addEventListener('ar-status', (e) => {
+    if (e.detail.status === 'session-started') {
+      ui.innerHTML = '床に向けてスマホを動かし<br>画面をタップしてください';
+    }
+  });
+</script>
+
 </body>
 </html>
