--- a/index.html
+++ b/index.html
@@ -4,54 +4,60 @@
   <meta charset="UTF-8" />
   <title>ナカムロボ AR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
-    body { margin: 0; background: #000; overflow: hidden; }
-    .container { display: flex; flex-direction: column; height: 100vh; }
+    /* 画面全体から邪魔な要素を消す */
+    html, body { margin: 0; padding: 0; background: #000; height: 100%; overflow: hidden; }
     
-    /* モデル表示エリア：指の邪魔をしないよう設定を極限までシンプルに */
+    .container { display: flex; flex-direction: column; height: 100%; }
+
+    /* モデル表示エリア：指の反応を邪魔しないよう透明な要素を置かない */
     model-viewer {
       width: 100%;
       height: 70%;
       background: #000;
+      /* 指の動きをブラウザのスクロールに奪われないようにする */
       touch-action: none;
     }
 
-    /* ボタンエリア：30%確保して確実にタップさせる */
+    /* ボタンエリア：操作エリアと完全に分離 */
     .controls {
       height: 30%;
       display: flex;
       align-items: center;
       justify-content: center;
       background: #111;
+      border-top: 1px solid #333;
     }
 
     #ar-btn {
-      width: 80%;
+      width: 85%;
       height: 80px;
       background: #00ffcc;
       color: #000;
-      font-size: 22px;
+      font-size: 24px;
       font-weight: bold;
       border: none;
       border-radius: 40px;
       cursor: pointer;
     }
+    #ar-btn:active { transform: scale(0.95); }
   </style>
 </head>
 <body>
-<div class="container">
 
+<div class="container">
   <model-viewer
     id="mv"
     src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
     ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
     ar
-    /* WebXRで確実に起動させ、操作性を確保 */
-    ar-modes="webxr quick-look"
+    /* Android 16で最も指の反応が安定するScene Viewerを優先 */
+    ar-modes="scene-viewer quick-look webxr"
     camera-controls
     enable-pan
     ar-scale="auto"
+    /* 最初から巨大（3倍）にして操作しやすくする */
     scale="3 3 3"
     shadow-intensity="1"
     environment-image="neutral"
@@ -61,7 +67,7 @@
   <div class="controls">
     <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
   </div>
-
 </div>
+
 </body>
 </html>
