--- a/index.html
+++ b/index.html
@@ -2,72 +2,71 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ナカムロボ AR</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <style>
-    /* 画面全体から邪魔な要素を消す */
-    html, body { margin: 0; padding: 0; background: #000; height: 100%; overflow: hidden; }
-    
-    .container { display: flex; flex-direction: column; height: 100%; }
+  <title>AR Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
-    /* モデル表示エリア：指の反応を邪魔しないよう透明な要素を置かない */
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+  <style>
+    html, body {
+      margin: 0; padding: 0; background: #000; color: #fff;
+      font-family: sans-serif; height: 100%;
+    }
+
+    .wrap {
+      display: flex; flex-direction: column; align-items: center;
+      justify-content: center; height: 100%; text-align: center;
+    }
+
     model-viewer {
       width: 100%;
-      height: 70%;
+      height: 60vh;
       background: #000;
-      /* 指の動きをブラウザのスクロールに奪われないようにする */
-      touch-action: none;
     }
 
-    /* ボタンエリア：操作エリアと完全に分離 */
-    .controls {
-      height: 30%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #111;
-      border-top: 1px solid #333;
-    }
-
-    #ar-btn {
-      width: 85%;
-      height: 80px;
-      background: #00ffcc;
-      color: #000;
-      font-size: 24px;
+    /* 安定していた時のボタンデザイン */
+    button {
+      margin-top: 24px;
+      padding: 20px 40px;
+      font-size: 20px;
       font-weight: bold;
       border: none;
-      border-radius: 40px;
-      cursor: pointer;
+      border-radius: 999px;
+      background: #00ffcc;
+      color: #000;
+      box-shadow: 0 4px 15px rgba(0, 255, 204, 0.3);
     }
-    #ar-btn:active { transform: scale(0.95); }
   </style>
 </head>
+
 <body>
+  <div class="wrap">
 
-<div class="container">
-  <model-viewer
-    id="mv"
-    src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
-    ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
-    ar
-    /* Android 16で最も指の反応が安定するScene Viewerを優先 */
-    ar-modes="scene-viewer quick-look webxr"
-    camera-controls
-    enable-pan
-    ar-scale="auto"
-    /* 最初から巨大（3倍）にして操作しやすくする */
-    scale="3 3 3"
-    shadow-intensity="1"
-    environment-image="neutral"
-    interaction-prompt="none">
-  </model-viewer>
+    <model-viewer
+      id="mv"
+      src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
+      ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
+      ar
+      /* Androidで最もクラッシュしにくい設定 */
+      ar-modes="scene-viewer quick-look webxr"
+      camera-controls
+      autoplay
+      exposure="1"
+      /* モデルのサイズを標準に戻す（クラッシュ軽減） */
+      scale="1 1 1">
+    </model-viewer>
 
-  <div class="controls">
-    <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
+    <button onclick="startAR()">ARで見る</button>
+
   </div>
-</div>
 
+  <script>
+    function startAR() {
+      const mv = document.getElementById('mv');
+      if (mv) {
+        mv.activateAR();
+      }
+    }
+  </script>
 </body>
 </html>
