--- a/index.html
+++ b/index.html
@@ -2,71 +2,68 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>AR Viewer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-
+  <title>ナカムロボ AR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
   <style>
-    html, body {
-      margin: 0; padding: 0; background: #000; color: #fff;
-      font-family: sans-serif; height: 100%;
-    }
-
-    .wrap {
-      display: flex; flex-direction: column; align-items: center;
-      justify-content: center; height: 100%; text-align: center;
-    }
-
+    html, body { margin: 0; padding: 0; background: #000; height: 100%; overflow: hidden; }
+    .container { display: flex; flex-direction: column; height: 100%; }
+    
     model-viewer {
       width: 100%;
-      height: 60vh;
+      height: 70%;
       background: #000;
+      /* ブラウザの挙動に指を奪われない設定 */
+      touch-action: none;
     }
 
-    /* 安定していた時のボタンデザイン */
-    button {
-      margin-top: 24px;
-      padding: 20px 40px;
-      font-size: 20px;
-      font-weight: bold;
-      border: none;
-      border-radius: 999px;
+    .controls {
+      height: 30%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #111;
+      border-top: 1px solid #333;
+    }
+
+    #ar-btn {
+      width: 85%;
+      height: 85px;
       background: #00ffcc;
       color: #000;
-      box-shadow: 0 4px 15px rgba(0, 255, 204, 0.3);
+      font-size: 24px;
+      font-weight: bold;
+      border: none;
+      border-radius: 45px;
+      cursor: pointer;
+      box-shadow: 0 5px 20px rgba(0, 255, 204, 0.4);
     }
   </style>
 </head>
-
 <body>
-  <div class="wrap">
 
-    <model-viewer
-      id="mv"
-      src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
-      ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
-      ar
-      /* Androidで最もクラッシュしにくい設定 */
-      ar-modes="scene-viewer quick-look webxr"
-      camera-controls
-      autoplay
-      exposure="1"
-      /* モデルのサイズを標準に戻す（クラッシュ軽減） */
-      scale="1 1 1">
-    </model-viewer>
+<div class="container">
+  <model-viewer
+    id="mv"
+    src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
+    ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
+    ar
+    /* 【重要】scene-viewerを削除し、webxrのみに絞ってクラッシュを回避 */
+    ar-modes="webxr quick-look"
+    camera-controls
+    enable-pan
+    ar-scale="auto"
+    scale="1 1 1"
+    shadow-intensity="1"
+    environment-image="neutral"
+    interaction-prompt="none"
+    autoplay>
+  </model-viewer>
 
-    <button onclick="startAR()">ARで見る</button>
-
+  <div class="controls">
+    <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
   </div>
+</div>
 
-  <script>
-    function startAR() {
-      const mv = document.getElementById('mv');
-      if (mv) {
-        mv.activateAR();
-      }
-    }
-  </script>
 </body>
 </html>
