--- a/index.html
+++ b/index.html
@@ -1,55 +1,45 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<title>ナカムロボ AR</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <meta charset="UTF-8" />
+  <title>ナカムロボ AR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <style>
+    html, body { margin: 0; padding: 0; background: #000; height: 100%; overflow: hidden; }
+    .container { display: flex; flex-direction: column; height: 100%; }
+    
+    model-viewer {
+      width: 100%;
+      height: 70%;
+      background: #000;
+      /* ブラウザのスクロール動作を完全に切り、指の動きを100%ARに渡す */
+      touch-action: none;
+    }
 
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background: #000;
-  overflow: hidden;
-}
+    .controls {
+      height: 30%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #111;
+      border-top: 1px solid #333;
+    }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-model-viewer {
-  width: 100%;
-  height: 70%;
-  background: #000;
-  /* AR向け：遮断しすぎない */
-  touch-action: manipulation;
-}
-
-.controls {
-  height: 30%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #111;
-}
-
-#ar-btn {
-  width: 85%;
-  height: 85px;
-  background: #00ffcc;
-  color: #000;
-  font-size: 24px;
-  font-weight: bold;
-  border-radius: 45px;
-  border: none;
-}
-</style>
+    #ar-btn {
+      width: 85%;
+      height: 85px;
+      background: #00ffcc;
+      color: #000;
+      font-size: 24px;
+      font-weight: bold;
+      border: none;
+      border-radius: 45px;
+      cursor: pointer;
+      box-shadow: 0 5px 20px rgba(0, 255, 204, 0.4);
+    }
+  </style>
 </head>
-
 <body>
 
 <div class="container">
@@ -58,9 +48,14 @@ model-viewer {
     src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
     ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
     ar
+    /* WebXR単独指定でクラッシュ回避 */
     ar-modes="webxr quick-look"
-    ar-placement="floor"
+    /* 移動・回転・拡大のための3種の神器 */
+    camera-controls
+    enable-pan
     ar-scale="auto"
+    /* 初期設定 */
+    scale="1 1 1"
     shadow-intensity="1"
     environment-image="neutral"
     interaction-prompt="none"
@@ -68,26 +63,9 @@ model-viewer {
   </model-viewer>
 
   <div class="controls">
-    <button id="ar-btn">AR召喚</button>
+    <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
   </div>
 </div>
-
-<script>
-const mv = document.getElementById("mv");
-const btn = document.getElementById("ar-btn");
-
-btn.addEventListener("click", async () => {
-  await mv.activateAR();
-});
-
-// AR開始時に「余計な操作」を切る
-mv.addEventListener("ar-status", (e) => {
-  if (e.detail.status === "session-started") {
-    mv.removeAttribute("camera-controls");
-    mv.removeAttribute("enable-pan");
-  }
-});
-</script>
 
 </body>
 </html>
