--- a/index.html
+++ b/index.html
@@ -11,32 +11,29 @@
     
     model-viewer {
       width: 100%;
-      height: 70%;
+      height: 75%; /* 操作ミスを防ぐため表示エリアを少し拡大 */
       background: #000;
-      /* ブラウザのスクロール動作を完全に切り、指の動きを100%ARに渡す */
       touch-action: none;
     }
 
     .controls {
-      height: 30%;
+      height: 25%;
       display: flex;
       align-items: center;
       justify-content: center;
       background: #111;
-      border-top: 1px solid #333;
     }
 
     #ar-btn {
       width: 85%;
-      height: 85px;
+      height: 80px;
       background: #00ffcc;
       color: #000;
       font-size: 24px;
       font-weight: bold;
       border: none;
-      border-radius: 45px;
+      border-radius: 40px;
       cursor: pointer;
-      box-shadow: 0 5px 20px rgba(0, 255, 204, 0.4);
     }
   </style>
 </head>
@@ -48,15 +45,15 @@
     src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
     ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
     ar
-    /* WebXR単独指定でクラッシュ回避 */
     ar-modes="webxr quick-look"
-    /* 移動・回転・拡大のための3種の神器 */
+    /* 床の上での移動を許可する重要設定 */
+    ar-placement="floor"
     camera-controls
+    /* 1本指での平行移動を強制有効化 */
     enable-pan
     ar-scale="auto"
-    /* 初期設定 */
     scale="1 1 1"
-    shadow-intensity="1"
+    shadow-intensity="1.5"
     environment-image="neutral"
     interaction-prompt="none"
     autoplay>
