--- a/index.html
+++ b/index.html
@@ -8,37 +8,12 @@
   <style>
     html, body { margin: 0; padding: 0; background: #000; height: 100%; overflow: hidden; }
     .container { display: flex; flex-direction: column; height: 100%; }
-    
-    model-viewer {
-      width: 100%;
-      height: 75%; /* 操作ミスを防ぐため表示エリアを少し拡大 */
-      background: #000;
-      touch-action: none;
-    }
-
-    .controls {
-      height: 25%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #111;
-    }
-
-    #ar-btn {
-      width: 85%;
-      height: 80px;
-      background: #00ffcc;
-      color: #000;
-      font-size: 24px;
-      font-weight: bold;
-      border: none;
-      border-radius: 40px;
-      cursor: pointer;
-    }
+    model-viewer { width: 100%; height: 75%; background: #000; touch-action: none; }
+    .controls { height: 25%; display: flex; align-items: center; justify-content: center; background: #111; }
+    #ar-btn { width: 85%; height: 80px; background: #00ffcc; color: #000; font-size: 24px; font-weight: bold; border: none; border-radius: 40px; }
   </style>
 </head>
 <body>
-
 <div class="container">
   <model-viewer
     id="mv"
@@ -46,23 +21,19 @@
     ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
     ar
     ar-modes="webxr quick-look"
-    /* 床の上での移動を許可する重要設定 */
+    /* これが重要：床に置くことを明示 */
     ar-placement="floor"
+    /* 1本指移動を有効にするための設定 */
     camera-controls
-    /* 1本指での平行移動を強制有効化 */
     enable-pan
     ar-scale="auto"
-    scale="1 1 1"
-    shadow-intensity="1.5"
-    environment-image="neutral"
     interaction-prompt="none"
+    shadow-intensity="1.5"
     autoplay>
   </model-viewer>
-
   <div class="controls">
     <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
   </div>
 </div>
-
 </body>
 </html>
