--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     .container { display: flex; flex-direction: column; height: 100%; }
     model-viewer { width: 100%; height: 75%; background: #000; touch-action: none; }
     .controls { height: 25%; display: flex; align-items: center; justify-content: center; background: #111; }
-    #ar-btn { width: 85%; height: 80px; background: #00ffcc; color: #000; font-size: 24px; font-weight: bold; border: none; border-radius: 40px; }
+    #ar-btn { width: 85%; height: 80px; background: #00ffcc; color: #000; font-size: 24px; font-weight: bold; border: none; border-radius: 40px; box-shadow: 0 4px 15px rgba(0, 255, 204, 0.4); }
   </style>
 </head>
 <body>
@@ -21,9 +21,8 @@
     ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
     ar
     ar-modes="webxr quick-look"
-    /* これが重要：床に置くことを明示 */
     ar-placement="floor"
-    /* 1本指移動を有効にするための設定 */
+    /* 移動・回転を許可 */
     camera-controls
     enable-pan
     ar-scale="auto"
@@ -35,5 +34,18 @@
     <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
   </div>
 </div>
+
+<script>
+  const mv = document.getElementById('mv');
+  
+  // ARセッションが始まったら、強制的に「移動」の設定を上書きして叩き込む
+  mv.addEventListener('ar-status', (event) => {
+    if (event.detail.status === 'session-started') {
+      // 内部的に「床固定」と「自動スケーリング」を再認識させる
+      mv.arPlacement = "floor";
+      mv.arScale = "auto";
+    }
+  });
+</script>
 </body>
 </html>
