--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     .container { display: flex; flex-direction: column; height: 100%; }
     model-viewer { width: 100%; height: 75%; background: #000; touch-action: none; }
     .controls { height: 25%; display: flex; align-items: center; justify-content: center; background: #111; }
-    #ar-btn { width: 85%; height: 80px; background: #00ffcc; color: #000; font-size: 24px; font-weight: bold; border: none; border-radius: 40px; box-shadow: 0 4px 15px rgba(0, 255, 204, 0.4); }
+    #ar-btn { width: 85%; height: 80px; background: #00ffcc; color: #000; font-size: 24px; font-weight: bold; border: none; border-radius: 40px; }
   </style>
 </head>
 <body>
@@ -21,10 +21,12 @@
     ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
     ar
     ar-modes="webxr quick-look"
+    /* 床への設置を「強制」 */
     ar-placement="floor"
-    /* 移動・回転を許可 */
+    /* 手動での移動(pan)を明示的に許可 */
     camera-controls
     enable-pan
+    /* スケーリングを固定せず「自由に動かせる」状態へ */
     ar-scale="auto"
     interaction-prompt="none"
     shadow-intensity="1.5"
@@ -38,11 +40,12 @@
 <script>
   const mv = document.getElementById('mv');
   
-  // ARセッションが始まったら、強制的に「移動」の設定を上書きして叩き込む
+  // AR開始時に「移動・回転」のフラグを再度プログラムで上書きする
   mv.addEventListener('ar-status', (event) => {
     if (event.detail.status === 'session-started') {
-      // 内部的に「床固定」と「自動スケーリング」を再認識させる
-      mv.arPlacement = "floor";
+      // 内部的な操作パラメータを強制リセット
+      mv.resetTurntableRotation();
+      // AndroidのWebXRが移動を拒否しないよう、スケールを再適用
       mv.arScale = "auto";
     }
   });
