--- a/index.html
+++ b/index.html
@@ -8,63 +8,47 @@
   <style>
     html, body { margin: 0; padding: 0; background: #000; height: 100%; overflow: hidden; }
     .container { display: flex; flex-direction: column; height: 100%; }
-    
-    /* モデル表示エリア：指の反応を100%伝えるため余計なCSSを排除 */
-    model-viewer {
-      width: 100%;
-      height: 70%;
-      background: #000;
-      touch-action: none;
-    }
-
-    /* ボタンエリア：操作画面と完全に分離して干渉を防ぐ */
-    .controls {
-      height: 30%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #111;
-      border-top: 1px solid #333;
-    }
-
-    #ar-btn {
-      width: 85%;
-      height: 85px;
-      background: #00ffcc;
-      color: #000;
-      font-size: 24px;
-      font-weight: bold;
-      border: none;
-      border-radius: 45px;
-      cursor: pointer;
-      box-shadow: 0 5px 20px rgba(0, 255, 204, 0.4);
-    }
+    model-viewer { width: 100%; height: 75%; background: #000; touch-action: none; }
+    .controls { height: 25%; display: flex; align-items: center; justify-content: center; background: #111; }
+    #ar-btn { width: 85%; height: 80px; background: #00ffcc; color: #000; font-size: 24px; font-weight: bold; border: none; border-radius: 40px; }
   </style>
 </head>
 <body>
-
 <div class="container">
   <model-viewer
     id="mv"
     src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
     ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
     ar
-    /* Android 16で最も軽く、反応が良いScene Viewerを単独指定 */
-    ar-modes="scene-viewer quick-look"
+    ar-modes="webxr quick-look"
+    /* 床への設置を「強制」 */
+    ar-placement="floor"
+    /* 手動での移動(pan)を明示的に許可 */
     camera-controls
     enable-pan
+    /* スケーリングを固定せず「自由に動かせる」状態へ */
     ar-scale="auto"
-    /* サイズを標準(1)に。大きくしたい時はAR起動後に指で広げるのが最も安定 */
-    scale="1 1 1"
-    shadow-intensity="1"
     interaction-prompt="none"
+    shadow-intensity="1.5"
     autoplay>
   </model-viewer>
-
   <div class="controls">
     <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
   </div>
 </div>
 
+<script>
+  const mv = document.getElementById('mv');
+  
+  // AR開始時に「移動・回転」のフラグを再度プログラムで上書きする
+  mv.addEventListener('ar-status', (event) => {
+    if (event.detail.status === 'session-started') {
+      // 内部的な操作パラメータを強制リセット
+      mv.resetTurntableRotation();
+      // AndroidのWebXRが移動を拒否しないよう、スケールを再適用
+      mv.arScale = "auto";
+    }
+  });
+</script>
 </body>
 </html>
