--- a/index.html
+++ b/index.html
@@ -1,54 +1,11 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>ナカムロボ AR</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <style>
-    html, body { margin: 0; padding: 0; background: #000; height: 100%; overflow: hidden; }
-    .container { display: flex; flex-direction: column; height: 100%; }
-    model-viewer { width: 100%; height: 75%; background: #000; touch-action: none; }
-    .controls { height: 25%; display: flex; align-items: center; justify-content: center; background: #111; }
-    #ar-btn { width: 85%; height: 80px; background: #00ffcc; color: #000; font-size: 24px; font-weight: bold; border: none; border-radius: 40px; }
-  </style>
-</head>
-<body>
-<div class="container">
-  <model-viewer
-    id="mv"
-    src="https://nakamurobo2026.github.io/modelviewer/dance.glb"
-    ios-src="https://nakamurobo2026.github.io/modelviewer/dance.usdz"
-    ar
-    ar-modes="webxr quick-look"
-    /* 床への設置を「強制」 */
-    ar-placement="floor"
-    /* 手動での移動(pan)を明示的に許可 */
-    camera-controls
-    enable-pan
-    /* スケーリングを固定せず「自由に動かせる」状態へ */
-    ar-scale="auto"
-    interaction-prompt="none"
-    shadow-intensity="1.5"
-    autoplay>
-  </model-viewer>
-  <div class="controls">
-    <button id="ar-btn" onclick="document.getElementById('mv').activateAR()">AR召喚</button>
-  </div>
-</div>
-
-<script>
-  const mv = document.getElementById('mv');
-  
-  // AR開始時に「移動・回転」のフラグを再度プログラムで上書きする
-  mv.addEventListener('ar-status', (event) => {
-    if (event.detail.status === 'session-started') {
-      // 内部的な操作パラメータを強制リセット
-      mv.resetTurntableRotation();
-      // AndroidのWebXRが移動を拒否しないよう、スケールを再適用
-      mv.arScale = "auto";
-    }
-  });
-</script>
-</body>
-</html>
+<model-viewer src="dance.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
+    <div class="progress-bar hide" slot="progress-bar">
+        <div class="update-bar"></div>
+    </div>
+    <button slot="ar-button" id="ar-button">
+        View in your space
+    </button>
+    <div id="ar-prompt">
+        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
+    </div>
+</model-viewer>
