--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Model Viewer - Static</title>
+    <title>3D Model Viewer - Multi Device AR</title>
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
     <style>
         body { margin: 0; }
@@ -18,11 +18,12 @@
 
     <model-viewer 
         src="dance.glb" 
+        ios-src="dance.usdz" 
         ar 
         ar-modes="webxr scene-viewer quick-look" 
         camera-controls 
         shadow-intensity="1" 
-        alt="A 3D model of a dancer">
+        alt="A 3D model for iPhone and Android AR">
     </model-viewer>
 
 </body>
